# Voxle

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.cpp  shader_compile.bat
.github/workflows/: cpp_ubuntu20_04.yml
lib/vulkan/spirv-headers/: spirv.lua
res/shader/: shader.frag  shader.vert  wireframe.frag  wireframe.vert
res/shader/compiled/: frag.spv  shader.frag.spv  vert.spv  wireframe.frag.spv  wireframe.vert.spv
src/Engine/: Engine.h  Voxelate.cpp  Voxelate.h
src/Engine/Camera/: Camera.cpp  Camera.h
src/Engine/Collision/: AABB.cpp  AABB.hpp
src/Engine/Color/: Color.h
src/Engine/Logging/: Logger.h  RenderTimings.h
src/Engine/Renderer/: PrimitiveRenderer.cpp  PrimitiveRenderer.h
src/Engine/Renderer/Mesh/: Mesh.cpp  Mesh.h
src/Engine/Renderer/Primitives/: MeshPrimitives.h
src/Engine/Resource/: ResourceHandler.cpp  ResourceHandler.h
src/Engine/Scene/: Scene.h  SceneManager.h
src/Engine/Shader/: Shader.cpp  Shader.h
src/Engine/Texture/: Texture.cpp  Texture.h
src/Engine/Threading/: ThreadPool.cpp  ThreadPool.hpp
src/Engine/UI/: UserInterface.h
src/Engine/Util/: ColorUtil.cpp  ColorUtil.hpp  Util.cpp  Util.hpp
src/Engine/VulkanPipeline/: VkSetup.cpp  VkSetup.h  VulkanDebug.cpp  VulkanDebug.h  VulkanInstance.h
src/Engine/VulkanPipeline/Pipeline/: Commandbuffer.cpp  Commandbuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  RenderPass.cpp  RenderPass.h
src/Engine/VulkanPipeline/Pipeline/Buffer/: Buffer.cpp  Buffer.h
src/Engine/VulkanPipeline/Pipeline/Image/: Image.cpp  Image.h
src/Engine/VulkanPipeline/Pipeline/PushConstants/: GenericPushConstants.h
src/Engine/VulkanPipeline/Queue/: QueueHelper.cpp  QueueHelper.h
src/Engine/VulkanPipeline/Suitability/: SuitabilityChecker.cpp  SuitabilityChecker.h  SwapchainSuitability.cpp  SwapchainSuitability.h
src/Engine/VulkanPipeline/Validation/: VulkanValidationLayer.cpp  VulkanValidationLayer.h
src/Engine/Window/: EngineWindow.h
src/Engine/World/: Block.hpp  Chunk.cpp  Chunk.hpp  ChunkHandler.cpp  ChunkHandler.hpp  VoxelAccess.cpp  VoxelAccess.hpp  chunk.cpp  chunk.hpp
src/Engine/World/Block/: CubeDefinition.hpp
